--- a/面试整理/7.简历/resume.html
+++ b/面试整理/7.简历/resume.html
@@ -9,24 +9,27 @@
       display: flex;
       align-items: center;
       margin-top: 20px;
-      margin-left: 50px;
+      margin-left: 48px;
     }
     .name{
-      font-size: 78px;
+      font-size: 66px;
     }
 
     .icon{
       width: 48px;
       height: 48px;
-      margin-right: 12px;
+      margin-right: 16px;
     }
     .content{
-      font-size: 42px;
+      font-size: 46px;
       color: #333;
       margin-right: 48px;
     }
+    .time-new{
+      font-family: 'Times New Roman';
+    }
     .width-fix{
-      width: 250px;
+      width: 266px;
     }
   </style>
 </head>
@@ -34,23 +37,23 @@
   <div class="line name">xxx</div>
   <div class="line">
     <image class="icon" src="./icons/wode.png"/>
-    <span class="content width-fix">x | xx</span>
+    <span class="content width-fix">xx | <span class="time-new">xx</span>岁</span>
     <image class="icon" src="./icons/zhiwei-.png"/>
     <span class="content">xxx</span>
   </div>
   <div class="line">
     <image class="icon" src="./icons/icon--.png"/>
-    <span class="content width-fix">xx</span>
+    <span class="content width-fix"><span class="time-new">xxx</span></span>
     <image class="icon" src="./icons/youxiang.png"/>
-    <span class="content">xx@xx.com</span>
+    <span class="content"><span class="time-new">xxx@xx.com</span></span>
   </div>
   <div class="line">
     <image class="icon" src="./icons/dizhi.png"/>
-    <span class="content width-fix">现居</span>
+    <span class="content width-fix">xx</span>
     <image class="icon" src="./icons/xueli.png"/>
-    <span class="content">xx大学</span>
+    <span class="content">xx</span>
     <image class="icon" src="./icons/SSLshuzizhengshu.png"/>
-    <span class="content">xxxx</span>
+    <span class="content"><span class="time-new">xx</span></span>
   </div>
 </body>
 </html>
