demo of requirejs

--- a/RequireJS/1.example/index.html
+++ b/RequireJS/1.example/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script data-main='./main.js' src='../requirejs.js'></script>
+    <script data-main='./main.js' src='./requirejs.js'></script>
 </body>
 </html>
