--- a/工具/2.gulp/src/index.html
+++ b/工具/2.gulp/src/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../dist/static/css/1.css" />
-    <script src="../dist/static/js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./static/css/1.css" />
+    <script src="./static/js/index.js"></script>
 </head>
+
 <body>
+    <div class="logo"></div>
+
     <div class="header">
-        <div class="title">I am title</div>
+        <div class="title">I am hh</div>
     </div>
+    <div class="img-box"></div>
 </body>
 </html>
